<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">WatApp</string>
    <string name="action_settings">Settings</string>
    <string name="done_button">Done</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- MainActivity -->
    <string name="main_title">Main Screen</string>
    <string name="takePict">Start camera</string>
    <string name="results">Get Results</string>
    <string name="symptoms">Enter Symptoms</string>
    <string name="information">Enter Information</string>
    <string name="progressCamera">Camera progress:</string>
    <string name="progressAge">Information progress:</string>
    <string name="progressSymptom">Symptom progress:</string>
    <string name="progress">Progress:</string>

    <!-- IntroActivity -->
    <string name="app_intro">Welcome!</string>

    <!-- CameraActivity -->
    <string name="camera">Is your symptom visible?</string>
    <string name="cameraYes">Would you like to take a picture\n for a more accurate diagnosis?</string>

    <!-- CropActivity -->
    <string name="crop_title">Crop image</string>
    <string name="crop_button">Crop</string>
    <string name="cropAbove">Please crop the image above, fitting the entire skin condition in the box and pressing CROP.</string>
    <string name="cropBelow">If the image below is satisfactory, press DONE.</string>

    <!-- AgeActivity -->
    <string name="age_title">Enter information</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age:</string>
    <string name="question1">Have you had this condition before?</string>
    <string name="question2">How long have you had the condition?</string>

    <!-- SymptomActivity -->
    <string name="symptom_title">Symptoms</string>
    <string name="subtitleSelect">Select Symptoms</string>


</resources>
