<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnYes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:onClick="yesClicked" />

    <Button
        android:id="@+id/btnNo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_button"
        android:onClick="noClicked" />

</LinearLayout>